--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
@@ -6,13 +6,14 @@
       [checked]="isEnableToggleChecked"
       (change)="onSlideToggleChange($event)"
     >
-      {{ 'feature-flags.enable.text' | translate }}
+      {{ slideToggleText }}
     </mat-slide-toggle>
 
     <button
       *ngIf="showPrimaryButton"
       mat-flat-button
       color="primary"
+      [disabled]="primaryActionBtnDisabled"
       (click)="onPrimaryButtonClick()"
     >
       <span class="primary-button-text">{{ primaryButtonText }}</span>
@@ -20,11 +21,7 @@
   </div>
 
   <div class="options-container dense-2">
-    <button
-      *ngIf="showMenuButton"
-      mat-icon-button
-      [matMenuTriggerFor]="menu"
-    >
+    <button *ngIf="showMenuButton" mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
@@ -38,10 +35,7 @@
       </button>
     </mat-menu>
 
-    <button
-      mat-icon-button
-      (click)="onSectionCardExpandChange()"
-    >
+    <button mat-icon-button [disabled]="primaryActionBtnDisabled" (click)="onSectionCardExpandChange()">
       <mat-icon>{{ isSectionCardExpanded ? 'expand_less' : 'expand_more' }}</mat-icon>
     </button>
   </div>
