Refine Section Card Expansion and FilterMode Handling

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-section-card.component.html
@@ -20,6 +20,7 @@
       [menuButtonItems]="menuButtonItems"
       [isSectionCardExpanded]="isSectionCardExpanded"
       [primaryActionBtnDisabled]="flag.filterMode === FILTER_MODE.INCLUDE_ALL"
+      [sectionCardExpandBtnDisabled]="flag.filterMode === FILTER_MODE.INCLUDE_ALL"
       (primaryButtonClick)="addIncludeListClicked()"
       (slideToggleChange)="onSlideToggleChange($event, flag.id)"
       (menuButtonItemClick)="onMenuButtonItemClick($event)"
@@ -30,8 +31,7 @@
     <!-- content -->
     <app-feature-flag-inclusions-table
       content
-      *ngIf="isSectionCardExpanded && flag.filterMode !== FILTER_MODE.INCLUDE_ALL"
-      class="full-width"
+      *ngIf="isSectionCardExpanded"
     ></app-feature-flag-inclusions-table>
   </app-common-section-card>
 </ng-container>
