--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
@@ -35,7 +35,11 @@
       </button>
     </mat-menu>
 
-    <button mat-icon-button [disabled]="primaryActionBtnDisabled" (click)="onSectionCardExpandChange()">
+    <button
+      mat-icon-button
+      [disabled]="sectionCardExpandBtnDisabled"
+      (click)="onSectionCardExpandChange()"
+    >
       <mat-icon>{{ isSectionCardExpanded ? 'expand_less' : 'expand_more' }}</mat-icon>
     </button>
   </div>
