--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
     align-items: flex-start;
     max-height: 64px;
-    overflow: scroll;
+    overflow: auto;
 
     .icon-button {
       background: none;
