import ff validation api and frontend integration part1 WIP

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.html
@@ -11,7 +11,7 @@
       <app-common-import-container
         fileType=".json"
         buttonLabel="Import Json"
-        (filesSelected)="handleFilesSelected($event)"
+        (change)="handleFilesSelected($event)"
         class="full-width"
       >
       </app-common-import-container>
