import validation to return compatibility

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.html
@@ -10,7 +10,7 @@
     <app-common-import-container
       fileType=".json"
       buttonLabel="Choose JSON"
-      (filesSelected)="handleFilesSelected($event)"
+      (change)="handleFilesSelected($event)"
     >
     </app-common-import-container>
     <p class="ft-12-400 form-hint">
