Implement the Include List Row Enable/Disable/Delete

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-table/feature-flag-inclusions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-table/feature-flag-inclusions-table.component.html
@@ -4,5 +4,6 @@
     [dataSource]="dataSource$ | async"
     [isLoading]="isLoading$ | async"
     noDataRowText="feature-flags.details.inclusions.card.no-data-row.text"
+    (rowAction)="onRowAction($event)"
   ></app-common-details-participant-list-table>
 </div>
