--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -1,20 +1,18 @@
-<div scroll (scrolled)="fetchFlagsOnScroll()" class="participant-list-table-container" #tableContainer>
+<div class="participant-list-table-container" #tableContainer>
   <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
   <table
     class="participant-list-table"
     mat-table
     [dataSource]="dataSource"
     [ngClass]="{'no-data': !dataSource?.length, 'no-enable-column': displayedColumns.length < 5}"
-    matSort
-    (matSortChange)="changeSorting($event)"
   >
     <!-- Type Column -->
     <ng-container [matColumnDef]="PARTICIPANT_LIST_COLUMN_NAMES.TYPE">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="type-column ft-14-600">
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.TYPE | translate }}
       </th>
-      <td mat-cell *matCellDef="let segment" class="type-column ft-14-400">
-        {{ segment.type }}
+      <td mat-cell *matCellDef="let rowData" class="type-column ft-14-400">
+        {{ rowData.listType }}
       </td>
     </ng-container>
 
@@ -23,8 +21,10 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="values-column ft-14-600">
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.VALUES | translate }}
       </th>
-      <td mat-cell *matCellDef="let segment" class="values-column ft-14-400">
-        {{ segment.values.length + ' Values' }}
+      <td mat-cell *matCellDef="let rowData" class="values-column ft-14-400">
+        <ng-container *ngIf="rowData.listType !== memberTypes.SEGMENT">
+          {{ (rowData.listType === memberTypes.INDIVIDUAL ? rowData.segment.individualForSegment.length : rowData.segment.groupForSegment.length) + ' Values' }}
+        </ng-container>
       </td>
     </ng-container>
 
@@ -34,8 +34,8 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.NAME | translate }}
       </th>
       <!-- TODO this is placeholder logic, need to simplify -->
-      <td mat-cell *matCellDef="let segment" class="name-column ft-14-400">
-        {{ segment.name }}
+      <td mat-cell *matCellDef="let rowData" class="name-column ft-14-400">
+        {{ rowData.segment.name }}
       </td>
     </ng-container>
 
@@ -44,10 +44,11 @@
       <th mat-header-cell *matHeaderCellDef class="enable-column ft-14-600">
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.ENABLE | translate }}
       </th>
-      <td mat-cell *matCellDef="let segment" class="enable-column ft-14-400">
+      <td mat-cell *matCellDef="let rowData" class="enable-column ft-14-400">
         <mat-slide-toggle
           color="primary"
-          [checked]="segment.enabled"
+          [checked]="rowData.enabled"
+          (change)="onSlideToggleChange($event, rowData)"
         >
         </mat-slide-toggle>
       </td>
@@ -58,18 +59,18 @@
       <th mat-header-cell *matHeaderCellDef class="actions-column ft-14-600">
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.ACTIONS | translate }}
       </th>
-      <td mat-cell *matCellDef="let segment" class="actions-column ft-14-400 dense-2">
-        <button mat-icon-button class="action-button">
+      <td mat-cell *matCellDef="let rowData" class="actions-column ft-14-400 dense-2">
+        <button mat-icon-button class="action-button" (click)="onEditButtonClick(rowData)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button class="action-button">
+        <button mat-icon-button class="action-button" (click)="onDeleteButtonClick(rowData)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-row *matRowDef="let rowData; columns: displayedColumns"></tr>
 
     <!-- No Data Row -->
     <tr *matNoDataRow>
