Implement Include List Row Actions (#1793)
* wip converting to generalalize form for segments page also

* wip working form, http call not working

* wip segments works

* wip modal finished before refactor

* remove consoles log

* cleanup and refactor

* typos corrected

* fix upsert issue and common-dialog-config

* add common modal types and move the types there, use the config file for actual config

* entity adapter definition

* fixed the upsert issue, needed updateOne not upsertOne

* fix effects dependencies in spect test

* Add addFlagInclusionList and addFlagExclusionList to environment files, standardize API field across environments

* Remove the CSS styles for the upsert-private-segment-list-modal component

* Update the width of UpsertPrivateSegmentListModal

* move the effect to feature flags instead of segments

* fix up modal listeners

* empty segments behavior

* fix backwards logic

* Implement the Include List Row Enable/Disable/Delete

* Remove unused FeatureFlagListValidator from feature-flags.model.ts

* Update PUT /flags/inclusionList/:id endpoint to expect List ID instead of Flag ID in the URL

* Comment out PUT inclusion/exclusion list request tests (to be updated later)

* Implement the Edit Include List button

* Replace setTimeout with RxJS timer for dropdown opening

* Add { emitEvent: false } to form patchValue in the populateFormForEdit() function

* Update autoFocus from false to 'first-heading' in openUpsertPrivateSegmentListModal for consistency

* Add ID validation check for PUT /exclusionList/:id endpoint for consistency

---------

Co-authored-by: danoswaltCL <doswalt@carnegielearning.com>
Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-section-card.component.html
@@ -15,12 +15,16 @@
     [showMenuButton]="true"
     [menuButtonItems]="menuButtonItems"
     [isSectionCardExpanded]="isSectionCardExpanded"
-    (primaryButtonClick)="addIncludeListClicked(flag.context[0])"
+    (primaryButtonClick)="onAddIncludeListClick(flag.context[0], flag.id)"
     (menuButtonItemClick)="onMenuButtonItemClick($event)"
     (sectionCardExpandChange)="onSectionCardExpandChange($event)"
   >
   </app-common-section-card-action-buttons>
 
   <!-- content -->
-  <app-feature-flag-inclusions-table content *ngIf="isSectionCardExpanded"></app-feature-flag-inclusions-table>
+  <app-feature-flag-inclusions-table
+    content
+    *ngIf="isSectionCardExpanded"
+    (rowAction)="onRowAction($event, flag.id)"
+  ></app-feature-flag-inclusions-table>
 </app-common-section-card>
