--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -9,10 +9,15 @@
   <form [formGroup]="privateSegmentListForm" class="form-standard dense-3">
     <mat-form-field appearance="outline">
       <mat-label class="ft-14-400">Type</mat-label>
-      <mat-select formControlName="listType" class="ft-14-400">
-        <mat-option 
-          *ngFor="let type of listOptionTypes$ | async" 
-          [value]="type.value" 
+      <mat-select
+        formControlName="listType"
+        class="ft-14-400"
+        placeholder="Select list type"
+        #typeSelectRef
+      >
+        <mat-option
+          *ngFor="let type of listOptionTypes$ | async"
+          [value]="type.value"
           class="ft-14-400"
           [disabled]="(isSegmentsListTypeDisabled$ | async) && type.value === LIST_TYPES.SEGMENT"
         >
@@ -24,7 +29,7 @@
       <mat-label class="ft-14-400">Segment</mat-label>
       <input type="text" matInput formControlName="segment" [matAutocomplete]="auto" class="ft-14-400">
       <mat-hint class="form-hint ft-12-400">{{ "feature-flags.upsert-private-segment-list-modal" | translate }}</mat-hint>
-      <mat-autocomplete 
+      <mat-autocomplete
         #auto="matAutocomplete"
         [displayWith]="displayAsSegmentName"
         requireSelection= "true"
