--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: center;
     font-size: 12px;
+    color: var(--black-2);
   }
   .context-chip {
     margin: 5px;
