--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -11,7 +11,8 @@
     margin-bottom: 0;
     list-style-type: none;
   }
-  .leaf-node-button-icon {
+  .leaf-node-icon {
+    width: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
