add "Include All" toggle to inclusion list header (#1781)
* add "Include All" toggle to inclusion list header

* Refine Section Card Expansion and FilterMode Handling

* feature flag default value migrations

* merge dev

* review changes

* use PATCH

* keep inclusion list collapsed when filter mode is includeAll

---------

Co-authored-by: Zack Lee <zlee@carnegielearning.com>
Co-authored-by: amurphy-cl <65311369+amurphy-cl@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-inclusions-section-card/feature-flag-inclusions-section-card.component.html
@@ -1,21 +1,27 @@
-<app-common-section-card *ngIf="featureFlag$ | async as flag">
+<app-common-section-card *ngIf="selectedFlag$ | async as flag">
   <!-- header-left -->
   <app-common-section-card-title-header
     header-left
     [title]="'feature-flags.details.inclusions.card.title.text' | translate"
     [subtitle]="'feature-flags.details.inclusions.card.subtitle.text' | translate"
-    [tableRowCount]="tableRowCount$ | async"
+    [tableRowCount]="rowCountWithInclude$ | async"
   ></app-common-section-card-title-header>
 
   <!-- header-right -->
   <app-common-section-card-action-buttons
     header-right
+    [showSlideToggle]="true"
+    [slideToggleText]="'feature-flags.details.inclusions.include-all.toggle.text' | translate"
+    [isEnableToggleChecked]="flag.filterMode === FILTER_MODE.INCLUDE_ALL"
     [showPrimaryButton]="true"
     [primaryButtonText]="'feature-flags.details.add-include-list.button.text' | translate"
     [showMenuButton]="true"
     [menuButtonItems]="menuButtonItems"
-    [isSectionCardExpanded]="isSectionCardExpanded"
+    [isSectionCardExpanded]="isSectionCardExpanded && flag.filterMode !== FILTER_MODE.INCLUDE_ALL"
+    [primaryActionBtnDisabled]="flag.filterMode === FILTER_MODE.INCLUDE_ALL"
+    [sectionCardExpandBtnDisabled]="flag.filterMode === FILTER_MODE.INCLUDE_ALL"
     (primaryButtonClick)="onAddIncludeListClick(flag.context[0], flag.id)"
+    (slideToggleChange)="onSlideToggleChange($event, flag.id)"
     (menuButtonItemClick)="onMenuButtonItemClick($event)"
     (sectionCardExpandChange)="onSectionCardExpandChange($event)"
   >
@@ -24,7 +30,7 @@
   <!-- content -->
   <app-feature-flag-inclusions-table
     content
-    *ngIf="isSectionCardExpanded"
+    *ngIf="isSectionCardExpanded && flag.filterMode !== FILTER_MODE.INCLUDE_ALL"
     (rowAction)="onRowAction($event, flag.id)"
   ></app-feature-flag-inclusions-table>
 </app-common-section-card>
