--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -9,12 +9,7 @@
   <form [formGroup]="privateSegmentListForm" class="form-standard dense-3">
     <mat-form-field appearance="outline">
       <mat-label class="ft-14-400">Type</mat-label>
-      <mat-select
-        formControlName="listType"
-        class="ft-14-400"
-        placeholder="Select list type"
-        #typeSelectRef
-      >
+      <mat-select formControlName="listType" class="ft-14-400" placeholder="Select list type" #typeSelectRef>
         <mat-option
           *ngFor="let type of listOptionTypes$ | async"
           [value]="type.value"
@@ -27,29 +22,25 @@
     </mat-form-field>
     <mat-form-field *ngIf="selectedListType === LIST_TYPES.SEGMENT" appearance="outline">
       <mat-label class="ft-14-400">Segment</mat-label>
-      <input type="text" matInput formControlName="segment" [matAutocomplete]="auto" class="ft-14-400">
-      <mat-hint class="form-hint ft-12-400">{{ "feature-flags.upsert-private-segment-list-modal" | translate }}</mat-hint>
-      <mat-autocomplete
-        #auto="matAutocomplete"
-        [displayWith]="displayAsSegmentName"
-        requireSelection= "true"
-      >
+      <input type="text" matInput formControlName="segment" [matAutocomplete]="auto" class="ft-14-400" />
+      <mat-hint class="form-hint ft-12-400">{{
+        'feature-flags.upsert-private-segment-list-modal' | translate
+      }}</mat-hint>
+      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayAsSegmentName" requireSelection="true">
         <mat-option *ngFor="let segment of segmentsOptions$ | async" [value]="segment" class="ft-14-400">
           {{ segment.name }}
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
     <ng-container *ngIf="selectedListType && selectedListType !== LIST_TYPES.SEGMENT">
-      <app-common-tags-input
-        formControlName="values"
-      ></app-common-tags-input>
+      <app-common-tags-input formControlName="values"></app-common-tags-input>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Name</mat-label>
-        <input matInput formControlName="name" class="ft-14-400">
+        <input matInput formControlName="name" class="ft-14-400" />
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Description (optional)</mat-label>
-        <input matInput formControlName="description" class="ft-14-400">
+        <input matInput formControlName="description" class="ft-14-400" />
       </mat-form-field>
     </ng-container>
   </form>
