--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.scss
@@ -4,6 +4,9 @@
   column-gap: 4px;
 
   .main-container {
+    display: flex;
+    align-items: center;
+    column-gap: 34px;
     padding: 0 16px;
 
     ::ng-deep .mat-mdc-slide-toggle .mdc-label {
@@ -20,7 +23,7 @@
     display: flex;
     column-gap: 4px;
 
-    ::ng-deep .mat-mdc-icon-button .mat-icon {
+    .mat-mdc-icon-button:not(.mat-mdc-button-disabled) .mat-icon {
       color: var(--dark-grey);
     }
   }
