--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -4,7 +4,7 @@
     class="participant-list-table"
     mat-table
     [dataSource]="dataSource"
-    [ngClass]="{'no-data': !dataSource?.length, 'no-enable-column': displayedColumns.length < 5}"
+    [ngClass]="{ 'no-data': !dataSource?.length, 'no-enable-column': displayedColumns.length < 5 }"
   >
     <!-- Type Column -->
     <ng-container [matColumnDef]="PARTICIPANT_LIST_COLUMN_NAMES.TYPE">
@@ -23,7 +23,11 @@
       </th>
       <td mat-cell *matCellDef="let rowData" class="values-column ft-14-400">
         <ng-container *ngIf="rowData.listType !== memberTypes.SEGMENT">
-          {{ (rowData.listType === memberTypes.INDIVIDUAL ? rowData.segment.individualForSegment.length : rowData.segment.groupForSegment.length) + ' Values' }}
+          {{
+            (rowData.listType === memberTypes.INDIVIDUAL
+              ? rowData.segment.individualForSegment.length
+              : rowData.segment.groupForSegment.length) + ' Values'
+          }}
         </ng-container>
       </td>
     </ng-container>
@@ -45,11 +49,7 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.ENABLE | translate }}
       </th>
       <td mat-cell *matCellDef="let rowData" class="enable-column ft-14-400">
-        <mat-slide-toggle
-          color="primary"
-          [checked]="rowData.enabled"
-          (change)="onSlideToggleChange($event, rowData)"
-        >
+        <mat-slide-toggle color="primary" [checked]="rowData.enabled" (change)="onSlideToggleChange($event, rowData)">
         </mat-slide-toggle>
       </td>
     </ng-container>
