Prevent App Freezing in Metrics Component with Large Datasets (#1799)
* Prevent App Freezing in Metrics Component with Large Datasets

* Fix the search error when there's no context

* Make circular bullets non-greyed out for consistency

* Remove button tags for non-interactive bullet-point icons

* Remove redundant font color setting

* Update loadChildren type to Observable instead of Promise

* Update LazyLoadingMetric interface to include id and children for deleteNode function to work

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -5,17 +5,14 @@
   padding: 0;
   height: 100%;
 
-  .mat-nested-tree-invisible {
-    display: none;
-  }
-
   .mat-nested-tree ul,
   .mat-nested-tree li {
     margin-top: 0;
     margin-bottom: 0;
     list-style-type: none;
   }
-  .leaf-node-button-icon {
+  .leaf-node-icon {
+    width: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,10 +26,6 @@
   }
   .mat-nested-tree div[role='group'] > .mat-tree-node {
     padding-left: 40px;
-  }
-
-  .mat-nested-tree-invisible {
-    display: none;
   }
 
   .header {
