--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -1,9 +1,9 @@
 <mat-form-field class="input-container full-width" subscriptSizing="dynamic" appearance="outline">
   <mat-label class="ft-14-400">
-    {{ 'home.new-experiment.overview.tags.placeHolder' | translate }}
+    {{ (inputType | titlecase) + ' (optional)' | translate }}
   </mat-label>
   <div class="chips-container dense-2">
-    <mat-chip-grid #tagsList aria-label="Tags" formControlName="tags">
+    <mat-chip-grid #tagsList>
       <mat-chip-row
         *ngFor="let componentTag of tags.value"
         [selectable]="isChipSelectable"
@@ -21,6 +21,7 @@
         [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
         [matChipInputAddOnBlur]="addChipOnBlur"
         (matChipInputTokenEnd)="addChip($event)"
+        [placeholder]="tags.value.length === 0 ? ((inputType | titlecase) + ' separated by commas' | translate) : ''"
         class="ft-14-400"
       />
     </mat-chip-grid>
