--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
@@ -10,6 +10,10 @@
     max-height: 64px;
     overflow: auto;
 
+    .mat-mdc-chip-grid {
+      width: 100%;
+    }
+
     .icon-button {
       background: none;
       border: none;
