Enable the upload / download button functionality in Upsert-List values

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -36,6 +36,7 @@
       <app-common-tags-input
         formControlName="values"
         [inputType]="CommonTagInputType.VALUES"
+        [actionButtons]="true"
       ></app-common-tags-input>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Name</mat-label>
