--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
@@ -43,6 +43,7 @@
     <app-common-tags-input
       formControlName="tags"
       [inputType]="CommonTagInputType.TAGS"
+      [actionButtons]="false"
     ></app-common-tags-input>
   </form>
 </app-common-dialog>
