Prevent default action on CSV import/download button click

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -26,10 +26,10 @@
       />
     </mat-chip-grid>
     <div class="sharing-icon-buttons">
-      <button *ngIf="showImportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick()">
+      <button *ngIf="showImportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick($event)">
         <span class="material-symbols-outlined">upload</span>
       </button>
-      <button *ngIf="showExportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick()">
+      <button *ngIf="showExportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick($event)">
         <span class="material-symbols-outlined">download</span>
       </button>
     </div>
