--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -36,7 +36,8 @@
       <app-common-tags-input
         formControlName="values"
         [inputType]="CommonTagInputType.VALUES"
-        [actionButtons]="true"
+        [forceValidation]="forceValidation"
+        (downloadRequested)="onDownloadRequested($event)"
       ></app-common-tags-input>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Name</mat-label>
