--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -1,6 +1,18 @@
-<mat-form-field class="input-container full-width" subscriptSizing="dynamic" appearance="outline">
+<mat-form-field
+  *ngIf="!showImportHelper"
+  class="input-container"
+  subscriptSizing="dynamic"
+  appearance="outline"
+  [ngClass]="{'invalid-field': isInvalid()}"
+>
   <mat-label class="ft-14-400">
-    {{ (inputType | titlecase) + ' (optional)' | translate }}
+    {{
+      (inputType === CommonTagInputType.TAGS
+        ? 'feature-flags.upsert-list-modal.tags-label.text'
+        : 'feature-flags.upsert-list-modal.values-label.text'
+      ) | translate
+    }}
+    <span *ngIf="inputType === CommonTagInputType.VALUES" class="required-asterisk">*</span>
   </mat-label>
   <div class="chips-container dense-2">
     <mat-chip-grid #tagsList>
@@ -21,17 +33,37 @@
         [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
         [matChipInputAddOnBlur]="addChipOnBlur"
         (matChipInputTokenEnd)="addChip($event)"
-        [placeholder]="tags.value.length === 0 ? ((inputType | titlecase) + ' separated by commas' | translate) : ''"
+        (focus)="onFocus()"
+        (blur)="onBlur()"
+        [placeholder]="tagsExist ? '' :
+          (inputType === CommonTagInputType.TAGS
+            ? 'feature-flags.upsert-list-modal.tags-placeholder.text'
+            : 'feature-flags.upsert-list-modal.values-placeholder.text'
+          ) | translate"
         class="ft-14-400"
       />
     </mat-chip-grid>
-    <div class="sharing-icon-buttons">
-      <button *ngIf="showImportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick($event)">
-        <span class="material-symbols-outlined">upload</span>
-      </button>
-      <button *ngIf="showExportIcon" mat-icon-button class="icon-button" (click)="onActionButtonClick($event)">
-        <span class="material-symbols-outlined">download</span>
+    <div *ngIf="inputType === CommonTagInputType.VALUES" class="sharing-icon-buttons">
+      <button mat-icon-button class="icon-button" (click)="onActionButtonClick($event)">
+        <span class="material-symbols-outlined">
+          {{ tagsExist ? 'download' : 'upload' }}
+        </span>
       </button>
     </div>
   </div>
 </mat-form-field>
+
+<div *ngIf="showImportHelper" class="drag-drop-container">
+  <app-common-import-container
+    fileType=".csv"
+    buttonLabel="Choose CSV"
+    (closeButtonClick)="onCloseButtonClick($event)"
+    (filesSelected)="handleFilesSelected($event)"
+    [importFailed]="importFailed$ | async"
+  >
+  </app-common-import-container>
+  <p class="ft-12-400 form-hint">
+    {{ 'feature-flags.upsert-list-modal.import-csv.message.text' | translate }}
+    <a class="learn-more-link" href="https://www.upgradeplatform.org/" target="_blank" rel="noopener noreferrer">Learn more</a>
+  </p>
+</div>
