--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.scss
@@ -1,6 +1,6 @@
 .input-container {
   width: 100%;
-  padding-bottom: 16px;
+  padding-bottom: 22px;
 
   ::ng-deep .mat-mdc-text-field-wrapper {
     padding-right: 5px;
@@ -8,6 +8,22 @@
     .mat-mdc-form-field-infix {
       padding: 6px 0;
     }
+  }
+
+  &.invalid-field {
+    ::ng-deep .mat-mdc-text-field-wrapper {
+      .mdc-notched-outline > * {
+        border-color: red !important;
+      }
+
+      .mdc-floating-label {
+        color: red !important;
+      }
+    }
+  }
+
+  .required-asterisk {
+    margin-left: -3px;
   }
 
   .chips-container {
@@ -20,6 +36,10 @@
 
     .mat-mdc-chip-grid {
       width: 100%;
+
+      .mat-mdc-chip-input {
+        min-height: 32px;
+      }
     }
 
     .icon-button {
@@ -33,15 +53,31 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      color: var(--dark-grey);
 
       .material-symbols-outlined {
         font-size: 20px;
+        color: var(--dark-grey);
       }
 
       &:hover {
         background: #f5f5f5;
       }
+
+      &:active {
+        background: #dfdfdf;
+      }
     }
+  }
+}
+
+.drag-drop-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2px;
+  padding-bottom: 2px;
+
+  .form-hint {
+    text-indent: 16px;
+    margin-bottom: 0;
   }
 }
