--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -22,10 +22,17 @@
     </mat-form-field>
     <mat-form-field *ngIf="selectedListType === LIST_TYPES.SEGMENT" appearance="outline">
       <mat-label class="ft-14-400">Segment</mat-label>
-      <input type="text" matInput formControlName="segment" [matAutocomplete]="auto" class="ft-14-400" />
-      <mat-hint class="form-hint ft-12-400">{{
-        'feature-flags.upsert-private-segment-list-modal' | translate
-      }}</mat-hint>
+      <input
+        type="text"
+        matInput
+        formControlName="segment"
+        [matAutocomplete]="auto"
+        [placeholder]="'feature-flags.upsert-list-modal.segment-placeholder.text' | translate"
+        class="ft-14-400"
+      />
+      <mat-error class="ft-12-400">
+        {{ 'feature-flags.upsert-list-modal.segment.error.message.text' | translate }}
+      </mat-error>
       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayAsSegmentName" requireSelection="true">
         <mat-option *ngFor="let segment of segmentsOptions$ | async" [value]="segment" class="ft-14-400">
           {{ segment.name }}
@@ -41,7 +48,15 @@
       ></app-common-tags-input>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Name</mat-label>
-        <input matInput formControlName="name" class="ft-14-400" />
+        <input matInput formControlName="name" placeholder="e.g., My schools" class="ft-14-400" />
+        <mat-hint class="form-hint ft-12-400">
+          {{
+            (config.title === 'Add Include List'
+              ? 'feature-flags.upsert-include-list-modal.name-hint.text'
+              : 'feature-flags.upsert-exclude-list-modal.name-hint.text'
+            ) | translate
+          }}
+        </mat-hint>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Description (optional)</mat-label>
